--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,17 +16,36 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-           	android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".CreateBaby"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Nursery_Center"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Nursery"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Food"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Interactive"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".Nursery_People"
+            android:label="@string/title_activity_nursery__people" >
         </activity>
     </application>
 
